Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,10 @@ header {
     background-color: rgb(11, 35, 51);
     margin: 0px;
     display: flex;
-    justify-content: flex-start;
 }
 
 nav {
-    margin-right: auto;
-    margin-left: 60px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    font-size: 36px;
+    font-size: 16ppx;
     color: white;
 }
 
@@ -61,7 +56,7 @@ h1 {
 .main-text {
     display: flex;
     gap: 30px;
-    padding-top: 20px;
+    padding-top: 100px;
     height: 400px;
 }
 
